--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -102,10 +102,10 @@ jobs:
   # Docker Build and Push
   # =============================================================================
   docker-build:
-    name: Build Docker Images
+    name: 🐳 Build Docker Images
     runs-on: ubuntu-latest
     needs: [test, security-scan]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    if: "${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}"
     
     strategy:
       matrix:
@@ -125,7 +125,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
       
     - name: Log in to Docker Hub
-      if: secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != ''
+      if: "${{ secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != '' }}"
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -142,7 +142,7 @@ jobs:
           type=sha,prefix=sha-
           type=raw,value=latest,enable={{is_default_branch}}
           
-    - name: 🔨 Build and push Docker image
+    - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         context: ./services/${{ matrix.service }}
@@ -160,7 +160,7 @@ jobs:
     name: Deploy to Hugging Face Spaces
     runs-on: ubuntu-latest
     needs: [test, security-scan]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && secrets.HF_TOKEN != ''
+    if: "${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && secrets.HF_TOKEN != '' }}"
     
     steps:
     - name: Checkout code
@@ -198,7 +198,7 @@ jobs:
           cp data/processed/embeddings.npy data/processed/
         fi
         
-    - name: 🧪 Test HF Space app locally
+    - name: Test HF Space app locally
       run: |
         timeout 30s python app.py || true
         
@@ -269,10 +269,10 @@ jobs:
   # Integration Tests
   # =============================================================================
   integration-tests:
-    name: 🔗 Integration Tests
+    name: Integration Tests
     runs-on: ubuntu-latest
     needs: [docker-build]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    if: "${{ github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') }}"
     
     services:
       postgres:
@@ -308,7 +308,7 @@ jobs:
         docker-compose up -d
         sleep 30  # Wait for services to be ready
         
-    - name: 🧪 Run integration tests
+    - name: Run integration tests
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ecommerce_sentiment
         RETRIEVAL_SERVICE_URL: http://localhost:8004
@@ -317,7 +317,7 @@ jobs:
         python -m pytest tests/test_integration.py -v
         
     - name: Cleanup
-      if: always()
+      if: "${{ always() }}"
       run: |
         docker-compose down -v
 
@@ -328,18 +328,18 @@ jobs:
     name: Notify Deployment
     runs-on: ubuntu-latest
     needs: [deploy-hf-spaces, integration-tests]
-    if: always() && (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'))
+    if: "${{ always() && (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')) }}"
     
     steps:
     - name: Deployment Success Notification
-      if: needs.deploy-hf-spaces.result == 'success'
+      if: "${{ needs.deploy-hf-spaces.result == 'success' }}"
       run: |
         echo "Deployment successful!"
         echo "HF Spaces: https://huggingface.co/spaces/${{ secrets.HF_USERNAME || 'your-username' }}/ecommerce-sentiment-analysis"
         echo "Docker Images: Available on Docker Hub"
         
     - name: Deployment Failure Notification
-      if: needs.deploy-hf-spaces.result == 'failure' || needs.integration-tests.result == 'failure'
+      if: "${{ needs.deploy-hf-spaces.result == 'failure' || needs.integration-tests.result == 'failure' }}"
       run: |
         echo "Deployment failed!"
         echo "Please check the logs for more information."
